--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,10 @@
 $backgroundColour: #58DDAF;
 $loaderColour: #2980b9;
+
+@mixin clear(){
+    &::after{
+        clear: both;
+        content: '';
+        display: block;
+    }
+}
