slots go through all groups and can restart, need to reshuffle when restarting

--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -29,3 +29,9 @@
     border-color: #ee5253;
     color: #fff;
 }
+
+.btn-matching{
+    background-color: #f39c12;
+    border-color: #f39c12;
+    color: #fff;
+}
